--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "apexcharts": "^3.48.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.3",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
